--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script defer src="index.js"></script>
-    <title>Month Calender</title>
+    <title>Month Calendar</title>
   </head>
   <body>
     <div class="container">
-      <div class="calender">
+      <div class="calendar">
         <div class="month">
           <div class="date">
             <h1></h1>
